2005-12-07  Iain simpson <iain.simpson@nokia.com>
	* Added MX header validity checking so device will no longer respond
	  to an M-SEARCH request if it is empty or a non-integer.
	  Fix in file cdevice_ssdp_server.c

2005-12-02  Aapo Makela <aapo.makela@nokia.com>
	* Added CG_HTTP_USE_PERSISTENT_CONNECTIONS define to have 
	  persistent HTTP-connections support with libcurl (if server 
	  supports it).
	* Fixed MAN header set bug in Control Point (double quotes for 
	  discover)

2005-12-02  Heikki Junnila <ext-heikki.junnila@nokia.com>
	* Fixed a typo in curl.h and curi.h that was looking for a member
	  declared in "urip" from struct CgNetURL, while it should be "uri"

2005-12-01  Aapo Makela <aapo.makela@nokia.com>
	* Added show timings statistics also to libcurl routine
	* Fixed to have Multicast TTL as specified in UPnP DA 1.0.1
	  specification (Multicast TTL 4).
	* Added CG_NET_USE_ANYADDR to use INADDR_ANY as network 
	  interface instead of using one socket for each interface 
	  excplicitly.

2005-11-25  Heikki Junnila <ext-heikki.junnila@nokia.com>
        * Removed argumentInList and argumentOutList from caction.[h|c]
          because they were not used anywhere thus hogging unnecessary
          memory.

2005-11-22  Heikki Junnila <ext-heikki.junnila@nokia.com>
	* Changed XML_LIBS and XML_CFLAGS in configure.in to use
	  'pkg-config libxml-2.0' instead of xml2-config. This requires
	  (at least in maemo) that PKG_CONFIG_PATH environment variable
	  points to a directory containing the "pkgconfig" directory.
	  PKG_CONFIG_PATH=/usr/lib should work in most cases.

2005-11-18  Heikki Junnila <ext-heikki.junnila@nokia.com>
	* Fixed an indefinite freezing problem with curl_easy_perform 
          (which can be caused by, for example, an unreachable proxy server
	  set to the environment variable http_proxy)

2005-11-18  Satoshi Konno <skonno@cybergarage.org>
	* Added some logging functions such as cg_debug_setoutputtype() and cg_debug_message().
